--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -64,7 +64,7 @@ justify-content: space-between;
   margin-left: 10px;
 }
 .navbar-right-content{
-  background-color: #77be45;
+  background-color: #0d6efd50;
   border-radius: 10px;
   padding: 5px;
   color: #444;
