--- a/src/components/Employee/LeaveApplicationEmpForm.css
+++ b/src/components/Employee/LeaveApplicationEmpForm.css
@@ -35,3 +35,20 @@
     align-self: center;
 }
 
+
+.update-cancel-container{
+    display: flex;
+    justify-content: center;
+    margin:10px
+}
+
+.update-cancel-container button{
+    margin-right: 10px;
+}
+
+#form{
+    padding:10px;
+}
+#form .row {
+    margin-bottom:10px;
+}
