--- a/src/components/Employee/LeaveApplicationEmpForm.css
+++ b/src/components/Employee/LeaveApplicationEmpForm.css
@@ -24,17 +24,22 @@
 #role-form-title{
     background-color:
     #5569dc50 ;
+    display: block;
+    margin: auto;
     padding: 10px;
     color: #444;
-    width: 200px;
+    min-width: 100px;
+    max-width: 400px;
     border-radius: 12px;
     text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .form-container #role-form-title{
     align-self: center;
 }
-
 
 .update-cancel-container{
     display: flex;
