--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -69,7 +69,7 @@ body,input {
  }
 
  .input-field{
-   max-width: 430px;
+   max-width: 380px;
    width: 100%;
    height: 55px;
    background-color: #f0f0f0;
@@ -80,6 +80,9 @@ body,input {
    padding: 0 .4rem;
    position: relative;
  }
+@media (max-width:768px){
+    max-width:450px
+}
 
  .input-field i{
   text-align: center;
