ui interface changed v 1.0

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,97 +1,102 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
-body,input {
-    font-family: "poppins",sans-serif;
-  }
+input{
+  font-family: "poppins", sans-serif;
+}
 
- .container{
-   position: relative;
-   width: 100%;
-   min-height: 100vh;
-   background-color: #fff;
-   overflow: hidden;
- }
+.container{
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
+  overflow: hidden;
+}
 
- .forms-container{
-   position:absolute;
-   width: 100%;
-   height: 100%;
-   top: 0;
-   left: 030%;
- }
+.container:before{
+  content: "";
+  position: absolute;
+  width: 2000px;
+  height: 2000px;
+  border-radius: 50%;
+  background: linear-gradient(-45deg,#33d98f, #33d98f,#33d98f,#33d98f);
+  top: -10%;
+  right: 48%;
+  transform: translateY(-50%);
+  z-index: 6;
+  transition: 1.8s ease-in-out;
+}
 
- form #logo-img{
-   margin: auto;
-   width: 250px;
-   align-self: center;
-   margin-top: 20px;
-   margin-bottom: 20px;
- }
- .signin-signup{
-   position: absolute;
-   top: 50%;
-   transform: translate(-50%,-50%);
-   left: 50%;
-   width: 50%;
-   transition: 1s 0.7s ease-in-out;
-   display: grid;
-   grid-template-columns: 1fr;
-   z-index: 5;
-   
-   
- }
+.forms-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* background-color: green; */
+}
 
- .signin-signup form{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   padding: 0rem 5rem;
-   transition: all 0.2s 0.7s;
-   overflow: hidden;
-   grid-column: 1 / 2;
-   grid-row: 1 / 2;
- }
+.signin-signup{
+  position: absolute;
+  top: 50%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr;
+  z-index: 5;
+  transition: 1s 0.7s ease-in-out;
+}
 
- form.sign-up-form{
-   opacity: 0;
-   z-index: 1;
- }
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5 rem;
+  overflow: hidden;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  transition: 0.2s 0.7s ease-in-out;
+}
 
- form.sign-in-form{
+form.sign-in-form{
   z-index: 2;
 }
 
- .title{
-   font-size: 2.2rem;
-   color: rgba(51, 51, 51, 0.932);
-   margin-bottom: 10px ;
- }
+form.sign-up-form{
+  z-index: 1;
+  opacity: 0;
+}
 
- .input-field{
-   max-width: 380px;
-   width: 100%;
-   height: 55px;
-   background-color: #f0f0f0;
-   margin: 10px 0;
-   border-radius: 55px;
-   display: grid;
-   grid-template-columns: 15% 85%;
-   padding: 0 .4rem;
-   position: relative;
- }
+.title{
+  font-size: 2.2rem;
+  color: #444;
+  margin-bottom: 10px;
+}
 
- .input-field i{
+.input-field{
+  max-width: 380px;
+  width: 100%;
+  height: 55px;
+  background-color: #f0f0f0;
+  margin: 10px 0;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0 0.4rem;
+}
+
+.input-field i{
   text-align: center;
   line-height: 55px;
   color: #acacac;
-  transition: 0.5s;
   font-size: 1.1rem;
 }
+
 .input-field input{
   background: none;
-  outline: none;
   border: none;
+  outline: none;
   line-height: 1;
   font-weight: 600;
   font-size: 1.1rem;
@@ -104,22 +109,51 @@ body,input {
 }
 
 .button{
-width: 150px;
-height: 49px;
-border: none;
-outline: none;
-border-radius: 49px;
-cursor: pointer;
-background-color: #5261ac;
-color: #fff;
-text-transform: uppercase;
-font-weight: 600;
-margin: 10px 0;
-transition: .5s;
+  width: 150px;
+  height: 49px;
+  border: none;
+  outline: none;
+  border-radius: 49px;
+  cursor: pointer;
+  background-color: #33d98f;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  transition: 0.5s;
 }
 
 .button:hover{
-  background-color: #77be44;
+  background-color: #5569dc;
+}
+
+.social-text{
+  padding: 0.7rem 0;
+  font-size: 1rem;
+}
+
+.social-media{
+  display: flex;
+  justify-content: center;
+}
+
+.social-icon{
+  height: 46px;
+  width: 46px;
+  background-color: #33d98f;
+  border-radius: 50%;
+  margin: 0 0.45rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.social-icon:hover{
+  background-color: #5569dc;
 }
 
 .panels-container{
@@ -132,43 +166,28 @@ transition: .5s;
   grid-template-columns: repeat(2, 1fr);
 }
 
-.container::before{
-  content: "";
-  position: absolute;
-  width: 2000px;
-  height: 2000px;
-  border-radius: 50%;
-  background-image: linear-gradient(-45deg,#5569dc 0%,#5569dc 100%);
-  top: -10%;
-  right: 40%;
-  transform: translateY(-50%);
-  transition: 3s ease-in;
-  z-index: 6;
-}
-
 .panel{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-around;
   text-align: center;
-  z-index: 6;
+  z-index: 7;
 }
 
 .left-panel{
   pointer-events: all;
-  padding: 3rem 17% 2rem 12%;
+  padding: 3rem 17% 2rem 12% ;
 }
 
 .right-panel{
   pointer-events: none;
-  padding: 3rem 12% 2rem 17%;
+  padding: 3rem 12% 2rem 17% ;
 }
 
 .panel .content{
   color: #fff;
-  transition: transform 0.9s ease-in-out;
-  transition-delay: 0.6s;
+  transition: .9s .6s ease-in-out;
 }
 
 .panel h3{
@@ -178,40 +197,45 @@ transition: .5s;
 }
 
 .panel p{
-  font-size: 0.95rem;
+  font-size: 0.95rem; 
   padding: 0.7rem 0;
 }
-
+/* sonme chagneg */
 .button.transparent{
   margin: 0;
   background: none;
-  border: 2px solid #fff ;
+  border: 2px solid #fff;
   width: 130px;
   height: 41px;
   font-weight: 600;
   font-size: 0.8rem;
 }
 
-.right-panel .content,.right-panel .image{
-  transform: translateX(800px);
-}
 
 .image{
   width: 100%;
-  transition: transform 1.1s ease-in-out;
-  transition-delay: 0.4s;
+  transition: 1.1s .6s ease-in-out;
 }
 
+.right-panel .content,
+.right-panel .image{
+  transform: translateX(800px);
+}
 
-.container.sign-up-mode::before{
+/* ANIMAATIONS */
+
+.container.sign-up-mode:before{
   transform: translate(100%,-50%);
   right: 52%;
 }
 
 .container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content
-{
-  transform: translateX(-800px);
+.container.sign-up-mode .left-panel .content{
+  transform: translateX(-800px)
+}
+
+.container.sign-up-mode .signin-signup{
+  left: 25%;
 }
 
 .container.sign-up-mode form.sign-up-form{
@@ -225,7 +249,8 @@ transition: .5s;
 }
 
 .container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content{
+.container.sign-up-mode .right-panel .content
+{
   transform: translateX(0%);
 }
 
@@ -237,59 +262,26 @@ transition: .5s;
   pointer-events: all;
 }
 
-@media (max-width:570px){
-  .signin-signup form{
-    padding: 0 1.5rem;
-  }
-
-  .forms-container{
-    top: 5%;
-    left: 25%;
-  }
-
-  .image{
-    display: none;
-  }
-
-  .panel .content{
-    padding: 0.5rem 1rem;
-  }
-
-  .container{
-    padding: 1.5rem;
-  }
-
-  .container:before{
-    bottom: 72%;
-    left: 50%;
-  }
-
-  .container.sign-up-mode::before{
-    bottom: 28%;
-    left:50%
-  }
-}
-
-@media (min-width:570px) and (max-width:870px){
-  .signin-signup,
-  .container.sign-up-mode .signin-signup{
-    left: 0%;
-  }
-
-}
-
-@media (max-width:870px){
+@media (max-width: 870px) {
   .container{
     min-height: 800px;
     height: 100vh;
   }
 
-  .signin-signup,
-  .container.sign-up-mode .signin-signup{
-    left: 20%;
+  .signin-signup{
+    width: 100%;
+    top: 95%;
+    transform: translate(-50%, -100%);
+    transition: 1s 0.8s ease-in-out;
   }
 
-  .panels-container{
+  .signin-signup,
+  .container.sign-up-mode .signin-signup {
+    left: 50%;
+  }
+
+  .panels-container {
+    /* display: grid; */
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr 1fr;
   }
@@ -313,25 +305,31 @@ transition: .5s;
   .image{
     width: 200px;
     transition: transform 0.9s ease-in-out;
+    transition-delay: 0.6s;
+  }
+
+  .panel .content {
+    padding-right: 15%;
+    transition: transform 0.9s ease-in-out;
     transition-delay: 0.8s;
   }
 
-  .panel h3{
+  .panel h3 {
     font-size: 1.2rem;
   }
 
-  .panel p{
+  .panel p {
     font-size: 0.7rem;
     padding: 0.5rem 0;
   }
 
-  .button.transparent{
+  .button.transparent {
     width: 110px;
     height: 35px;
     font-size: 0.7rem;
   }
 
-  .container:before{
+  .container:before {
     width: 1500px;
     height: 1500px;
     transform: translateX(-50%);
@@ -342,30 +340,71 @@ transition: .5s;
     transition: 2s ease-in-out;
   }
 
+  .container.sign-up-mode:before {
+    transform: translate(-50%, 100%);
+    bottom: 32%;
+    right: initial;
+  }
+
   .container.sign-up-mode .left-panel .image,
-  .container.sign-up-mode .left-panel .content{
+  .container.sign-up-mode .left-panel .content {
     transform: translateY(-300px);
   }
 
   .container.sign-up-mode .right-panel .image,
-  .container.sign-up-mode .right-panel .content{
+  .container.sign-up-mode .right-panel .content {
     transform: translateY(0px);
   }
 
   .right-panel .image,
-  .right-panel .content{
+  .right-panel .content {
     transform: translateY(300px);
   }
 
-  .container.sign-up-mode .signin-signup{
+  .container.sign-up-mode .signin-signup {
     top: 5%;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
   }
 
 }
 
-/* error message for invalid username and password */
-.alert{
-  font-size: 13px;
-  color:red
+@media (max-width: 570px) {
+  form {
+    padding: 0 1.5rem;
+  }
+
+  .image {
+    display: none;
+  }
+  .panel .content {
+    padding: 0.5rem 1rem;
+  }
+  .container {
+    padding: 1.5rem;
+  }
+
+  .container:before {
+    bottom: 72%;
+    left: 50%;
+  }
+
+  .container.sign-up-mode:before {
+    bottom: 28%;
+    left: 50%;
+  }
+}
+
+
+/* scale loader */
+.loading {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.hide-submit-button{
+  display: none;
+}
+
+.show-submit-button{
+  display: block;
 }
