--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,9 +1,9 @@
-.form
-{
+#role-form-outer-div .form{
     display: flex;
     flex-direction: column;
     padding: 20px; 
     box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
+    align-items: stretch;
     /* height: 80vh; */
 }
 
