--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,415 +1,415 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 
-input{
-  font-family: "poppins", sans-serif;
+input {
+	font-family: 'poppins', sans-serif;
 }
 
-.container{
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #fff;
-  overflow: hidden;
+.container {
+	position: relative;
+	width: 100%;
+	min-height: 100vh;
+	background-color: #fff;
+	overflow: hidden;
 }
 
-.container:before{
-  content: "";
-  position: absolute;
-  width: 2000px;
-  height: 2000px;
-  border-radius: 50%;
-  background: linear-gradient(-45deg,#33d98f, #33d98f,#33d98f,#33d98f);
-  top: -10%;
-  right: 48%;
-  transform: translateY(-50%);
-  z-index: 6;
-  transition: 1.8s ease-in-out;
+.container:before {
+	content: '';
+	position: absolute;
+	width: 2000px;
+	height: 2000px;
+	border-radius: 50%;
+	background: linear-gradient(-45deg, #5569dc, #5569dc, #5569dc, #5569dc);
+	top: -10%;
+	right: 48%;
+	transform: translateY(-50%);
+	z-index: 6;
+	transition: 1.8s ease-in-out;
 }
 
-.forms-container{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  /* background-color: green; */
+.forms-container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	/* background-color: green; */
 }
 
-.signin-signup{
-  position: absolute;
-  top: 50%;
-  left: 75%;
-  transform: translate(-50%, -50%);
-  width: 50%;
-  display: grid;
-  grid-template-columns: 1fr;
-  z-index: 5;
-  transition: 1s 0.7s ease-in-out;
+.signin-signup {
+	position: absolute;
+	top: 50%;
+	left: 75%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	display: grid;
+	grid-template-columns: 1fr;
+	z-index: 5;
+	transition: 1s 0.7s ease-in-out;
 }
 
-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0 5 rem;
-  overflow: hidden;
-  grid-column: 1/2;
-  grid-row: 1/2;
-  transition: 0.2s 0.7s ease-in-out;
+form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 0 5 rem;
+	overflow: hidden;
+	grid-column: 1/2;
+	grid-row: 1/2;
+	transition: 0.2s 0.7s ease-in-out;
 }
 
-form.sign-in-form{
-  z-index: 2;
+form.sign-in-form {
+	z-index: 2;
 }
 
-form.sign-up-form{
-  z-index: 1;
-  opacity: 0;
+form.sign-up-form {
+	z-index: 1;
+	opacity: 0;
 }
 
-.title{
-  font-size: 2.2rem;
-  color: #444;
-  margin-bottom: 10px;
+.title {
+	font-size: 2.2rem;
+	color: #444;
+	margin-bottom: 10px;
 }
 
-.input-field{
-  max-width: 380px;
-  width: 100%;
-  height: 55px;
-  background-color: #f0f0f0;
-  margin: 10px 0;
-  border-radius: 55px;
-  display: grid;
-  grid-template-columns: 15% 85%;
-  padding: 0 0.4rem;
+.input-field {
+	max-width: 380px;
+	width: 100%;
+	height: 55px;
+	background-color: #f0f0f0;
+	margin: 10px 0;
+	border-radius: 55px;
+	display: grid;
+	grid-template-columns: 15% 85%;
+	padding: 0 0.4rem;
 }
 
-.input-field i{
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  font-size: 1.1rem;
+.input-field i {
+	text-align: center;
+	line-height: 55px;
+	color: #acacac;
+	font-size: 1.1rem;
 }
 
-.input-field input{
-  background: none;
-  border: none;
-  outline: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #333;
+.input-field input {
+	background: none;
+	border: none;
+	outline: none;
+	line-height: 1;
+	font-weight: 600;
+	font-size: 1.1rem;
+	color: #333;
 }
 
-.input-field input::placeholder{
-  color: #aaa;
-  font-weight: 500;
+.input-field input::placeholder {
+	color: #aaa;
+	font-weight: 500;
 }
 
-.button{
-  width: 150px;
-  height: 49px;
-  border: none;
-  outline: none;
-  border-radius: 49px;
-  cursor: pointer;
-  background-color: #33d98f;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin: 10px 0;
-  transition: 0.5s;
+.button {
+	width: 150px;
+	height: 49px;
+	border: none;
+	outline: none;
+	border-radius: 49px;
+	cursor: pointer;
+	background-color: #5569dc;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 600;
+	margin: 10px 0;
+	transition: 0.5s;
 }
 
-.button:hover{
-  background-color: #5569dc;
+.button:hover {
+	background-color: #33d98f;
 }
 
-.social-text{
-  padding: 0.7rem 0;
-  font-size: 1rem;
+.social-text {
+	padding: 0.7rem 0;
+	font-size: 1rem;
 }
 
-.social-media{
-  display: flex;
-  justify-content: center;
+.social-media {
+	display: flex;
+	justify-content: center;
 }
 
-.social-icon{
-  height: 46px;
-  width: 46px;
-  background-color: #33d98f;
-  border-radius: 50%;
-  margin: 0 0.45rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.1rem;
-  transition: 0.3s;
+.social-icon {
+	height: 46px;
+	width: 46px;
+	background-color: #5569dc;
+	border-radius: 50%;
+	margin: 0 0.45rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	color: #fff;
+	font-size: 1.1rem;
+	transition: 0.3s;
 }
 
-.social-icon:hover{
-  background-color: #5569dc;
+.social-icon:hover {
+	background-color: #33d98f;
 }
 
-.panels-container{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.panels-container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 }
 
-.panel{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
-  text-align: center;
-  z-index: 7;
+.panel {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	justify-content: space-around;
+	text-align: center;
+	z-index: 7;
 }
 
-.left-panel{
-  pointer-events: all;
-  padding: 3rem 17% 2rem 12% ;
+.left-panel {
+	pointer-events: all;
+	padding: 3rem 17% 2rem 12%;
 }
 
-.right-panel{
-  pointer-events: none;
-  padding: 3rem 12% 2rem 17% ;
+.right-panel {
+	pointer-events: none;
+	padding: 3rem 12% 2rem 17%;
 }
 
-.panel .content{
-  color: #fff;
-  transition: .9s .6s ease-in-out;
+.panel .content {
+	color: #fff;
+	transition: 0.9s 0.6s ease-in-out;
 }
 
-.panel h3{
-  font-weight: 600;
-  line-height: 1;
-  font-size: 1.5rem;
+.panel h3 {
+	font-weight: 600;
+	line-height: 1;
+	font-size: 1.5rem;
 }
 
-.panel p{
-  font-size: 0.95rem; 
-  padding: 0.7rem 0;
+.panel p {
+	font-size: 0.95rem;
+	padding: 0.7rem 0;
 }
+
 /* sonme chagneg */
-.button.transparent{
-  margin: 0;
-  background: none;
-  border: 2px solid #fff;
-  width: 130px;
-  height: 41px;
-  font-weight: 600;
-  font-size: 0.8rem;
+.button.transparent {
+	margin: 0;
+	background: none;
+	border: 2px solid #fff;
+	width: 130px;
+	height: 41px;
+	font-weight: 600;
+	font-size: 0.8rem;
 }
 
-
-.image{
-  width: 100%;
-  transition: 1.1s .6s ease-in-out;
+.image {
+	width: 100%;
+	transition: 1.1s 0.6s ease-in-out;
 }
 
 .right-panel .content,
-.right-panel .image{
-  transform: translateX(800px);
+.right-panel .image {
+	transform: translateX(800px);
 }
 
 /* ANIMAATIONS */
 
-.container.sign-up-mode:before{
-  transform: translate(100%,-50%);
-  right: 52%;
+.container.sign-up-mode:before {
+	transform: translate(100%, -50%);
+	right: 52%;
 }
 
 .container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content{
-  transform: translateX(-800px)
+.container.sign-up-mode .left-panel .content {
+	transform: translateX(-800px);
 }
 
-.container.sign-up-mode .signin-signup{
-  left: 25%;
+.container.sign-up-mode .signin-signup {
+	left: 25%;
 }
 
-.container.sign-up-mode form.sign-up-form{
-  opacity: 1;
-  z-index: 2;
+.container.sign-up-mode form.sign-up-form {
+	opacity: 1;
+	z-index: 2;
 }
 
-.container.sign-up-mode form.sign-in-form{
-  opacity: 0;
-  z-index: 1;
+.container.sign-up-mode form.sign-in-form {
+	opacity: 0;
+	z-index: 1;
 }
 
 .container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content
-{
-  transform: translateX(0%);
+.container.sign-up-mode .right-panel .content {
+	transform: translateX(0%);
 }
 
-.container.sign-up-mode .left-panel{
-  pointer-events: none;
+.container.sign-up-mode .left-panel {
+	pointer-events: none;
 }
 
-.container.sign-up-mode .right-panel{
-  pointer-events: all;
+.container.sign-up-mode .right-panel {
+	pointer-events: all;
 }
 
 @media (max-width: 870px) {
-  .container{
-    min-height: 800px;
-    height: 100vh;
-  }
+	.container {
+		min-height: 800px;
+		height: 100vh;
+	}
 
-  .signin-signup{
-    width: 100%;
-    top: 95%;
-    transform: translate(-50%, -100%);
-    transition: 1s 0.8s ease-in-out;
-  }
+	.signin-signup {
+		width: 100%;
+		top: 95%;
+		transform: translate(-50%, -100%);
+		transition: 1s 0.8s ease-in-out;
+	}
 
-  .signin-signup,
-  .container.sign-up-mode .signin-signup {
-    left: 50%;
-  }
+	.signin-signup,
+	.container.sign-up-mode .signin-signup {
+		left: 50%;
+	}
 
-  .panels-container {
-    /* display: grid; */
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-  }
+	.panels-container {
+		/* display: grid; */
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr 2fr 1fr;
+	}
 
-  .panel{
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2.5rem 8%;
-    grid-column: 1 / 2;
-  }
+	.panel {
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+		padding: 2.5rem 8%;
+		grid-column: 1 / 2;
+	}
 
-  .right-panel{
-    grid-row: 3 / 4;
-  }
+	.right-panel {
+		grid-row: 3 / 4;
+	}
 
-  .left-panel{
-    grid-row: 1 / 2;
-  }
+	.left-panel {
+		grid-row: 1 / 2;
+	}
 
-  .image{
-    width: 200px;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.6s;
-  }
+	.image {
+		width: 200px;
+		transition: transform 0.9s ease-in-out;
+		transition-delay: 0.6s;
+	}
 
-  .panel .content {
-    padding-right: 15%;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.8s;
-  }
+	.panel .content {
+		padding-right: 15%;
+		transition: transform 0.9s ease-in-out;
+		transition-delay: 0.8s;
+	}
 
-  .panel h3 {
-    font-size: 1.2rem;
-  }
+	.panel h3 {
+		font-size: 1.2rem;
+	}
 
-  .panel p {
-    font-size: 0.7rem;
-    padding: 0.5rem 0;
-  }
+	.panel p {
+		font-size: 0.7rem;
+		padding: 0.5rem 0;
+	}
 
-  .button.transparent {
-    width: 110px;
-    height: 35px;
-    font-size: 0.7rem;
-  }
+	.button.transparent {
+		width: 110px;
+		height: 35px;
+		font-size: 0.7rem;
+	}
 
-  .container:before {
-    width: 1500px;
-    height: 1500px;
-    transform: translateX(-50%);
-    left: 30%;
-    bottom: 68%;
-    right: initial;
-    top: initial;
-    transition: 2s ease-in-out;
-  }
+	.container:before {
+		width: 1500px;
+		height: 1500px;
+		transform: translateX(-50%);
+		left: 30%;
+		bottom: 68%;
+		right: initial;
+		top: initial;
+		transition: 2s ease-in-out;
+	}
 
-  .container.sign-up-mode:before {
-    transform: translate(-50%, 100%);
-    bottom: 32%;
-    right: initial;
-  }
+	.container.sign-up-mode:before {
+		transform: translate(-50%, 100%);
+		bottom: 32%;
+		right: initial;
+	}
 
-  .container.sign-up-mode .left-panel .image,
-  .container.sign-up-mode .left-panel .content {
-    transform: translateY(-300px);
-  }
+	.container.sign-up-mode .left-panel .image,
+	.container.sign-up-mode .left-panel .content {
+		transform: translateY(-300px);
+	}
 
-  .container.sign-up-mode .right-panel .image,
-  .container.sign-up-mode .right-panel .content {
-    transform: translateY(0px);
-  }
+	.container.sign-up-mode .right-panel .image,
+	.container.sign-up-mode .right-panel .content {
+		transform: translateY(0px);
+	}
 
-  .right-panel .image,
-  .right-panel .content {
-    transform: translateY(300px);
-  }
+	.right-panel .image,
+	.right-panel .content {
+		transform: translateY(300px);
+	}
 
-  .container.sign-up-mode .signin-signup {
-    top: 5%;
-    transform: translate(-50%, 0);
-  }
-
+	.container.sign-up-mode .signin-signup {
+		top: 5%;
+		transform: translate(-50%, 0);
+	}
 }
 
 @media (max-width: 570px) {
-  form {
-    padding: 0 1.5rem;
-  }
+	form {
+		padding: 0 1.5rem;
+	}
 
-  .image {
-    display: none;
-  }
-  .panel .content {
-    padding: 0.5rem 1rem;
-  }
-  .container {
-    padding: 1.5rem;
-  }
+	.image {
+		display: none;
+	}
 
-  .container:before {
-    bottom: 72%;
-    left: 50%;
-  }
+	.panel .content {
+		padding: 0.5rem 1rem;
+	}
 
-  .container.sign-up-mode:before {
-    bottom: 28%;
-    left: 50%;
-  }
+	.container {
+		padding: 1.5rem;
+	}
+
+	.container:before {
+		bottom: 72%;
+		left: 50%;
+	}
+
+	.container.sign-up-mode:before {
+		bottom: 28%;
+		left: 50%;
+	}
 }
-
 
 /* scale loader */
 .loading {
-  text-align: center;
-  margin-top: 15px;
+	text-align: center;
+	margin-top: 15px;
 }
 
-.hide-submit-button{
-  display: none;
+.hide-submit-button {
+	display: none;
 }
 
-.show-submit-button{
-  display: block;
+.show-submit-button {
+	display: block;
 }
+
 /* error message for invalid username and password */
-.alert{
-  font-size: 13px;
-  color:red
+.alert {
+	font-size: 13px;
+	color: red;
 }
