--- a/src/components/HR/HRHome.css
+++ b/src/components/HR/HRHome.css
@@ -1,138 +1,149 @@
-.home{
-    display: flex;
-    flex-direction:column ;
-    flex-wrap: wrap;
-    margin:auto;
+#home {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	margin: 10px 20px;
 }
 
-@media (min-width:768px) {
-    .home{
-        flex-direction: row;
-    }
+@media (min-width: 768px) {
+	.home {
+		flex-direction: row;
+		margin: 10px;
+	}
 }
 
-.home-card
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    border:rgba(0, 0, 0, 0.75)  1px;
-    width:100vw;
-    margin-top:10px;
-    margin-left:10px;
-    border-radius: 12px;
-    box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
-    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
+.time-card {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px;
+	border: rgba(0, 0, 0, 0.75) 1px;
+	min-width: 100%;
+	border-radius: 12px;
+	box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
+	/* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
 
-    text-align: center;
-    margin-right: 5px;
-   
+	text-align: center;
+	margin-right: 10px;
 }
 
-.date{
-    font-size: small;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
-}
-.time{
-    font-size: small;
-    font-weight: bold;
+@media screen and (max-width: 540px) {
+	.time-card {
+		max-width: 50%;
+	}
 }
 
-
-.balance-count{
-    font-size: xx-large;
-    color: #77be45;
-    margin-left: 10px;
-    
+.date {
+	font-size: small;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-weight: bold;
+}
+.time {
+	font-size: small;
+	font-weight: bold;
 }
 
-@media (min-width:768px) {
-    .date-and-time-card{
-        width:100vw;
-    }
-    .date{
-        font-size:large ;
-        
-    }
-    .time{
-        font-size: large;
-    }
-}
-.emp-card{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    /* align-items: center; */
-    padding: 20px;
-    border:rgba(0, 0, 0, 0.75)  1px;
-    
-    margin-top:10px;
-    margin-left:10px;
-    border-radius: 12px;
-    box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
-    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
-
-    text-align: center;
-    margin-right: 15px;
-    /* max-width: 90%; */
-    min-width: 80vw;
-    
-}
-@media (min-width:768px) {
-    .emp-card{
-        flex-direction: row;
-        justify-content: space-between;
-    }
+.balance-count {
+	font-size: xx-large;
+	color: #77be45;
+	margin-left: 10px;
 }
 
-.pending-leaves-heading{
-    font-size: 25px;
-    padding:10px;
-    margin-right:auto;
-    
+@media (min-width: 768px) {
+	.date-and-time-card {
+		width: 100vw;
+	}
+	.date {
+		font-size: large;
+	}
+	.time {
+		font-size: large;
+	}
 }
-.leave-content{
-    display: flex;
-    justify-content: space-between;
-    min-width: 75%;
-    flex-wrap: wrap;
-}
-@media (min-width:768px){
-    .leave-content{
-        justify-content: space-around;
-    }
+.emp-card {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	/* align-items: center; */
+	padding: 20px;
+	border: rgba(0, 0, 0, 0.75) 1px;
+
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	border-radius: 12px;
+	box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
+	/* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
+
+	text-align: center;
+	margin-right: 15px;
+	/* max-width: 90%; */
 }
 
-.accept-reject-buttons{
-    display: flex;
-    justify-content: center;
-
+@media screen and (max-width: 768px) {
+	.emp-card {
+		flex-direction: column;
+		justify-content: flex-start;
+		max-width: 100%;
+		margin-right: 10px;
+	}
 }
 
+.pending-leaves-heading {
+	font-size: 25px;
+	padding: 10px;
+	margin-right: auto;
+}
+.leave-content {
+	display: flex;
+	justify-content: space-between;
+	max-width: 80%;
+	flex-wrap: wrap;
+}
+@media (min-width: 768px) {
+	.leave-content {
+		justify-content: space-around;
+	}
+}
 
-.accept-reject-buttons button{
-    min-width:100px;
-    min-height: 50px;
-    border-radius: 10px;
-    padding:7px;
-    margin-right: 10px;
-    color:#fff;
-    border-width:0px;
-}
-.accept-reject-buttons .accept{
-    background-color: #2eb85c;
-}
-.accept-reject-buttons .reject{
-    background-color: #e55353
-    ;
+.leave-content p {
+	margin-right: 20px;
 }
 
-@media (max-width:768px) {
-    .leave-content{
-        font-size: 12px;
-    }
-    
+.accept-reject-buttons {
+	display: flex;
+	justify-content: center;
+}
+
+.accept-reject-buttons button {
+	min-width: 100px;
+	min-height: 50px;
+	border-radius: 10px;
+	padding: 7px;
+	margin-right: 10px;
+	color: #fff;
+	border-width: 0px;
+}
+.accept-reject-buttons .accept {
+	background-color: #2eb85c;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+.accept-reject-buttons .reject {
+	background-color: #e55353;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+@media (max-width: 768px) {
+	.leave-content {
+		font-size: 12px;
+	}
+}
+
+.accept-reject-buttons button i {
+	margin-right: 10px;
 }
