--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -56,7 +56,7 @@
 .collapse-navbar {
 	margin-left: auto;
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 
 	background-color: #fff;
 }
@@ -73,6 +73,7 @@
 
 .navbar-right-content span {
 	margin-left: 10px;
+	display: inline-block;
 }
 /* .navbar-right-content {
 	background-color: #5569dc;
@@ -89,7 +90,6 @@
 .collapse-navbar p.navbar-right-content {
 	background: transparent;
 	border-radius: 10px;
-	padding: 5px;
 	color: #444;
 	font-weight: 500;
 }
@@ -110,6 +110,6 @@
 	font-weight: 500;
 }
 
-strong {
+.strong {
 	color: #5569dc;
 }
