--- a/src/components/Employee/Employeehome.css
+++ b/src/components/Employee/Employeehome.css
@@ -1,84 +1,92 @@
-.home{
-    display: flex;
-    flex-direction:column ;
-
+.home {
+	display: flex;
+	flex-direction: column;
 }
 
-@media (min-width:768px) {
-    .home{
-        flex-direction: row;
-    }
+@media (min-width: 768px) {
+	.home {
+		flex-direction: row;
+	}
 }
 
-.home-card
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    border:rgba(0, 0, 0, 0.75)  1px;
-    width:90%;
-    margin-top:10px;
-    margin-left:10px;
-    border-radius: 12px;
-    box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
-    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
+.home-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	padding: 20px;
+	/* border: rgba(0, 0, 0, 0.75) 1px; */
+	border-top: 5px solid #5569dc;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	width: 90%;
+	margin-top: 10px;
+	margin-left: 10px;
+	border-radius: 12px;
+	box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
+	/* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
 
-    text-align: center;
-    margin-right: 5px;
-   
+	text-align: center;
+	margin-right: 5px;
 }
 
-.date{
-    font-size: small;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
-}
-.time{
-    font-size: small;
-    font-weight: bold;
+.home-card:hover {
+	border-top: 5px solid #33d98f;
 }
 
-.leave-card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    border:rgba(0, 0, 0, 0.75)  1px;
-    width:90%;
-    margin-top:10px;
-    margin-left:10px;
-    border-radius: 12px;
-    box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
-    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
-
+.date {
+	font-size: small;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-weight: bold;
+}
+.time {
+	font-size: small;
+	font-weight: bold;
 }
 
-.leave-balance{
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.leave-card {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	border: rgba(0, 0, 0, 0.75) 1px;
+	width: 90%;
+	margin-top: 10px;
+	margin-left: 10px;
+	border-radius: 12px;
+	box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
+	border-top: 5px solid #5569dc;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	/* box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); */
 }
 
-.balance-count{
-    font-size: xx-large;
-    color: #77be45;
-    margin-left: 10px;
-    
+.leave-card:hover {
+	border-top: 5px solid #33d98f;
 }
 
-@media (min-width:768px) {
-    .date-and-time-card{
-        width:40%;
-    }
-    .date{
-        font-size:large ;
-        
-    }
-    .time{
-        font-size: large;
-    }
+.leave-balance {
+	font-weight: bold;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.balance-count {
+	font-size: xx-large;
+	color: #77be45;
+	margin-left: 10px;
+}
+
+@media (min-width: 768px) {
+	.date-and-time-card {
+		width: 40%;
+	}
+	.date {
+		font-size: large;
+	}
+	.time {
+		font-size: large;
+	}
 }
