--- a/src/components/Employee/LeaveApplicationEmpTable.css
+++ b/src/components/Employee/LeaveApplicationEmpTable.css
@@ -1,23 +1,20 @@
-.heading-and-button{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:10px;
+.heading-and-button {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
 }
-.leave-balance
-{
-    padding: 10px;
-    text-align: center;
-
-
+.leave-balance {
+	padding: 10px;
+	text-align: center;
 }
-#role-title{
-    font-weight: 600;
-    font-size: 20px;
+#role-title {
+	font-weight: 600;
+	font-size: 20px;
 }
-#add-button{
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    margin-right: 20px;
+#add-button {
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	margin-right: 20px;
 }
