--- a/src/components/HR/EmployeesListTable.css
+++ b/src/components/HR/EmployeesListTable.css
@@ -1,6 +1,19 @@
-.employees-heading
-{
-    font-size: 25px;
-    text-align: center;
-    padding-top: 10px;
+.heading-and-button {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+}
+#role-title {
+	font-weight: 600;
+	font-size: 20px;
+}
+#add-button {
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+}
+.add-employee-container {
+	display: flex !important;
+	flex-direction: row;
 }
