--- a/src/components/HR/EmployeeProfile.css
+++ b/src/components/HR/EmployeeProfile.css
@@ -17,6 +17,7 @@
 	background-clip: border-box;
 	border: 0 solid rgba(0, 0, 0, 0.125);
 	border-radius: 0.25rem;
+	min-height: 70vh;
 }
 
 .card-body {
@@ -65,3 +66,22 @@
 	margin-bottom: 20px;
 	margin-right: 20px;
 } */
+
+.status-bar {
+	background-color: red;
+}
+.leave-history-table {
+	padding: 20px;
+	width: 100%;
+	background-color: #fff;
+	background-clip: border-box;
+	border: 0 solid rgba(0, 0, 0, 0.125);
+	border-radius: 0.25rem;
+	min-height: 70vh;
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.loading-colors {
+	display: flex;
+	justify-content: center;
+}
