--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -108,7 +108,9 @@ form.sign-up-form {
   font-size: 1.1rem;
   margin-top: 20px;
   margin-left: 20px;
-  margin-right: 10px;
+  margin-right: 40px;
+
+  /* display: none; */
 }
 
 .input-field input {
@@ -255,6 +257,7 @@ form.sign-up-form {
 
 .container.sign-up-mode .signin-signup {
   /* left: 25%; */
+  padding: 0px;
 }
 
 .container.sign-up-mode form.sign-up-form {
@@ -288,10 +291,12 @@ form.sign-up-form {
 
   .signin-signup {
     width: 80%;
+    padding: 0px;
   }
 
   .input-field input::placeholder {
-    padding-left: 10px;
+    padding-left: 15px;
+    margin-left: 10px;
   }
   .signin-signup,
   .container.sign-up-mode .signin-signup {
@@ -413,6 +418,9 @@ form.sign-up-form {
   .container.sign-up-mode:before {
     bottom: 28%;
     left: 50%;
+  }
+  .input-icon {
+    /* display: none; */
   }
 }
 
