--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,76 +1,75 @@
-#role-form-outer-div .form{
-    display: flex;
-    flex-direction: column;
-    padding: 20px; 
-    box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
-    align-items: stretch;
-    /* height: 80vh; */
+#role-form-outer-div .form {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  box-shadow: 0 5px 20px -11px rgba(0, 0, 0, 0.75);
+  align-items: stretch;
+  /* height: 80vh; */
 }
 
-.label-option-container
-{
-    padding: 10px;
+.label-option-container {
+  padding: 10px;
 }
 
 .main-body {
-	padding: 15px;
-	/* position: relative;
+  padding: 15px;
+  /* position: relative;
 	height: 85vh; */
 }
 .card {
-	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
 .card {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	min-width: 0;
-	word-wrap: break-word;
-	background-color: #fff;
-	background-clip: border-box;
-	border: 0 solid rgba(0, 0, 0, 0.125);
-	border-radius: 0.25rem;
-    min-height:70vh
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0 solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  min-height: 70vh;
 }
 
 .card-body {
-	flex: 1 1 auto;
-	min-height: 1px;
-	padding: 1rem;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1rem;
 }
 
 .gutters-sm {
-	margin-right: -8px;
-	margin-left: -8px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
 
 .gutters-sm > .col,
-.gutters-sm > [class*='col-'] {
-	padding-right: 8px;
-	padding-left: 8px;
+.gutters-sm > [class*="col-"] {
+  padding-right: 8px;
+  padding-left: 8px;
 }
 .mb-3,
 .my-3 {
-	margin-bottom: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 .bg-gray-300 {
-	background-color: #e2e8f0;
+  background-color: #e2e8f0;
 }
 .h-100 {
-	height: 100% !important;
+  height: 100% !important;
 }
 .shadow-none {
-	box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .breadcrumb {
-	margin: 10px;
+  margin: 10px;
 }
 
 .back-edit-container {
-	display: flex;
+  display: flex;
 }
 
 /* .back-button {
@@ -80,3 +79,21 @@
 	margin-bottom: 20px;
 	margin-right: 20px;
 } */
+
+.box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+  border: solid 2px black;
+  padding: 10px;
+  border-radius: 10px;
+  width: 50%;
+}
+
+.input-search {
+  width: 100%;
+  outline: none;
+  border-width: 0px;
+  background-color: #fff;
+}
